Try to fix AsyncContextSpec